Delete unneeded routes and fix participations route
