# backend/api/src/controllers/participations.ts
@@ -1,6 +1,7 @@
 import { Controller, Get, Query, Route } from 'tsoa';
 import { requirePool, getParticipations } from '@game/db';
 import type { ParticipationsStats } from '@game/utils';
+import launchpadsData from '@game/utils/src/data';
 
 interface GetParticipationsResponse {
   stats: ParticipationsStats[];
@@ -15,7 +16,10 @@ export class ParticipationsController extends Controller {
   ): Promise<GetParticipationsResponse> {
     const pool = requirePool();
     wallet = wallet.toLowerCase();
-    const stats = await getParticipations.run({ launchpad, wallet }, pool);
+    const launchpadAddress = launchpadsData.find(lpad => lpad.slug === launchpad)?.address;
+    const stats = launchpadAddress
+      ? await getParticipations.run({ launchpad: launchpadAddress, wallet }, pool)
+      : [];
     return { stats };
   }
 }
